--- a/TDDCourseraCourse/pom.xml
+++ b/TDDCourseraCourse/pom.xml
@@ -6,4 +6,22 @@
   <packaging>pom</packaging>
   <name>Curso TDD ITA Coursera</name>
   <description>Curso TDD ITA Coursera</description>
+  <modules>
+  	<module>Pilha</module>
+  	<module>QuebraDeStringsComCamelCase</module>
+  	
+  </modules>
+  	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
