--- a/TDDCourseraCourse/pom.xml
+++ b/TDDCourseraCourse/pom.xml
@@ -9,7 +9,8 @@
   <modules>
   	<module>Pilha</module>
   	<module>QuebraDeStringsComCamelCase</module>
-  	
+
+  	<module>Tradutor</module>
   </modules>
   	<build>
 		<plugins>
