--- a/TDDCourseraCourse/pom.xml
+++ b/TDDCourseraCourse/pom.xml
@@ -11,6 +11,7 @@
   	<module>QuebraDeStringsComCamelCase</module>
 
   	<module>Tradutor</module>
+  	<module>TarefaRefatoracaoDoSAB</module>
   </modules>
   	<build>
 		<plugins>
