pom.xml Hands On Carrinho de Compras - Mock

--- a/TDDCourseraCourse/pom.xml
+++ b/TDDCourseraCourse/pom.xml
@@ -12,6 +12,8 @@
 
   	<module>Tradutor</module>
   	<module>TarefaRefatoracaoDoSAB</module>
+  	
+  	<module>CarrinhoCompras</module>
   </modules>
   	<build>
 		<plugins>
