--- a/TDDCourseraCourse/pom.xml
+++ b/TDDCourseraCourse/pom.xml
@@ -14,6 +14,7 @@
   	<module>TarefaRefatoracaoDoSAB</module>
   	
   	<module>CarrinhoCompras</module>
+  	<module>TarefaSoftwareDeCaixaEletronico</module>
   </modules>
   	<build>
 		<plugins>
