--- a/LivroJAVAWeb-JSF-JPA/JavaWeb_Inicio/pom.xml
+++ b/LivroJAVAWeb-JSF-JPA/JavaWeb_Inicio/pom.xml
@@ -60,6 +60,20 @@
 		<!-- <version>2.0</version> -->
 		<!-- </dependency> -->
 
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
