Inclusao de projeto tipos genericos.

--- a/coursera-course-java-avancado-web/pom.xml
+++ b/coursera-course-java-avancado-web/pom.xml
@@ -29,5 +29,6 @@
 	<modules>
 		<module>SomarParcelas</module>
 		<module>TesteFuncionalSomarParcelas</module>
+		<module>TiposGenericos</module>
 	</modules>
 </project>
