projetos que estavam localmente no computador do lactec

--- a/coursera-course-java-avancado-web/pom.xml
+++ b/coursera-course-java-avancado-web/pom.xml
@@ -30,5 +30,6 @@
 		<module>SomarParcelas</module>
 		<module>TesteFuncionalSomarParcelas</module>
 		<module>TiposGenericos</module>
+		<module>ContadoresEscopo</module>
 	</modules>
 </project>
