Projeto Oraculo Mineiro

--- a/coursera-course-java-avancado-web/pom.xml
+++ b/coursera-course-java-avancado-web/pom.xml
@@ -31,5 +31,6 @@
 		<module>TesteFuncionalSomarParcelas</module>
 		<module>TiposGenericos</module>
 		<module>ContadoresEscopo</module>
+		<module>OraculoMVC</module>
 	</modules>
 </project>
