Hands on banco de dados

--- a/coursera-course-java-avancado-web/pom.xml
+++ b/coursera-course-java-avancado-web/pom.xml
@@ -32,5 +32,6 @@
 		<module>TiposGenericos</module>
 		<module>ContadoresEscopo</module>
 		<module>OraculoMVC</module>
+		<module>AcessoBancoDeDados</module>
 	</modules>
 </project>
