--- a/coursera-course-java-avancado-web/AcessoBancoDeDados/pom.xml
+++ b/coursera-course-java-avancado-web/AcessoBancoDeDados/pom.xml
@@ -17,5 +17,23 @@
 			<version>9.4.1208</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.dbunit/dbunit -->
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.4.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+
 	</dependencies>
 </project>
