--- a/coursera-course-java-avancado-web/pom.xml
+++ b/coursera-course-java-avancado-web/pom.xml
@@ -33,5 +33,6 @@
 		<module>ContadoresEscopo</module>
 		<module>OraculoMVC</module>
 		<module>AcessoBancoDeDados</module>
+		<module>Comparador</module>
 	</modules>
 </project>
