start da tarefa da semana 4 e hands on guerra

--- a/coursera-course-java-avancado-web/pom.xml
+++ b/coursera-course-java-avancado-web/pom.xml
@@ -34,5 +34,7 @@
 		<module>OraculoMVC</module>
 		<module>AcessoBancoDeDados</module>
 		<module>Comparador</module>
+		
+		<module>LoginWeb</module>
 	</modules>
 </project>
