--- a/tarefa-livros-a-jato-gamificacao/pom.xml
+++ b/tarefa-livros-a-jato-gamificacao/pom.xml
@@ -15,12 +15,11 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/br.com.caelum/vraptor -->
+
 		<dependency>
 			<groupId>br.com.caelum</groupId>
 			<artifactId>vraptor</artifactId>
-			<version>4.0.0.Final</version>
+			<version>4.2.0-RC5</version>
 		</dependency>
 
 
