--- a/TarefaLivrosAJato/pom.xml
+++ b/TarefaLivrosAJato/pom.xml
@@ -70,6 +70,16 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<path>/TarefaLivrosAJato</path>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	<properties>
