--- a/TarefaLivrosAJato/pom.xml
+++ b/TarefaLivrosAJato/pom.xml
@@ -32,15 +32,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.10.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.2.6.Final</version>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.3.10.Final</version>
 		</dependency>
 
 		<dependency>
@@ -50,7 +50,6 @@
 		</dependency>
 
 	</dependencies>
-
 
 	<build>
 		<plugins>
