--- a/TarefaLivrosAJato/src/main/resources/log4j.properties
+++ b/TarefaLivrosAJato/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
-log4j.rootLogger=ALL, stdout
-log4j.logger.java.sql=ALL, stdout
-log4j.logger.org.hibernate.type=ALL
+log4j.rootLogger=DEBUG, stdout
+log4j.logger.org.hibernate=ERROR, stdout
+log4j.logger.java.sql=ERROR, stdout
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
