--- a/TarefaLivrosAJato/pom.xml
+++ b/TarefaLivrosAJato/pom.xml
@@ -63,6 +63,19 @@
 			<version>3.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>2.53.1</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>xml-apis</groupId>
+			<artifactId>xml-apis</artifactId>
+			<version>1.4.01</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
